# jetbrains_fake_cpp

./: .gitignore  CMakeLists.txt  ExecutionQueueBuilder.cpp  ExecutionQueueBuilder.hpp  README.md  Task.cpp  Task.hpp  TaskBuilder.cpp  TaskBuilder.hpp  basic-test.sh  build.bat  build.sh  fake.yaml  gtest.bat  gtest.sh  main.cpp  test.sh
.github/workflows/: cmake.yml
gtest/: CMakeLists.txt  ExecutionQueueBuilderTest.cpp  TaskTest.cpp  test1.yaml  test2.yaml
include/: ExecutionQueueBuilder.hpp  Task.hpp
src/: ExecutionQueueBuilder.cpp  Task.cpp  Task.hpp  main.cpp
test/: fake.yaml  main.c  main.cpp
testing/tests/: test1.sh  test2.sh
testing/tests/test1/: fake.yaml  main
testing/tests/test2/: fake.yaml
